--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "keycloud-react-common",
-  "version": "0.0.1",
+  "name": "keycloud-common",
+  "version": "0.0.2",
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
